# sc_linac_physics

./: .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/scripts/: get_versions.py
.github/workflows/: _get-versions.yml  _package.yml  _test.yml  python-app.yml  release.yml
applications/auto_setup/: setup_cavity.py  setup_cryomodule.py  setup_gui.py  setup_linac.py  setup_linac_object.py  setup_machine.py  setup_utils.py  srf_cavity_setup_launcher.py  srf_cm_setup_launcher.py  srf_global_setup_launcher.py  srf_linac_setup_launcher.py
applications/auto_setup/backend/: setup_cavity.py  setup_cryomodule.py  setup_linac.py  setup_linac_object.py  setup_machine.py
applications/auto_setup/frontend/: gui_cavity.py  gui_cryomodule.py  gui_linac.py  utils.py
applications/auto_setup/launcher/: srf_cavity_setup_launcher.py  srf_cm_setup_launcher.py  srf_global_setup_launcher.py  srf_linac_setup_launcher.py
applications/hl_tuner/: hl_tuner.py
applications/microphonics/: hardware_interface.py  main.py  microphonics_core.py  microphonics_gui.py
applications/microphonics/barebones/: test_gui.py
applications/microphonics/components/: components.py
applications/microphonics/gui/: __init__.py  async_data_manager.py  config_panel.py  data_acquisition.py  data_loader.py  main_window.py  plot_panel.py  statistics_calculator.py  status_panel.py
applications/microphonics/plots/: base_plot.py  fft_plot.py  histogram_plot.py  plot_panel.py  spectogram_plot.py  spectrogram_plot.py  time_series_plot.py
applications/microphonics/utils/: data_processing.py  file_parser.py  pv_utils.py  ui_utils.py
applications/parking/: park_gui.py  park_linac.py
applications/q0/: calibration.py  q0_cavity.py  q0_cryomodule.py  q0_gui.py  q0_gui_utils.py  q0_linac.py  q0_measurement_widget.py  q0_ui.py  q0_utils.py  rf_measurement.py  rf_run.py
applications/q0/calibrations/: cm02.json  cm17.json  cm20.json  cmH1.json  cmH2.json
applications/q0/q0_measurements/: cm02.json  cm06.json  cm07.json  cm11.json  cm16.json  cm17.json  cm20.json  cm21.json  cm27.json  cmH1.json  cmH2.json
applications/quench_processing/: quench_cavity.py  quench_cryomodule.py  quench_gui.py  quench_linac.py  quench_resetter.py  quench_utils.py  quench_worker.py
applications/sel_phase_optimizer/: sel_phase_linac.py  sel_phase_optimizer.py
applications/tuning/: cavity_section.py  park_gui.py  park_gui.ui  park_utils.py  rack_section.py  tune_cavity.py  tune_rack.py  tune_status.py  tune_stepper.py  tune_utils.py  tuner.py  tuning_gui.py
applications/tuning/launcher/: srf_cavity_detune_launcher.py  srf_rack_detune_launcher.py
calibrations/: cm20.json
data/calibrations/: cm20.json
data/q0_measurements/: cm20.json
displays/auto_plot/: auto_plot_gui.py
displays/cavity_display/: cavity_display.py
displays/cavity_display/backend/: backend_cavity.py  backend_machine.py  fault.py  runner.py
displays/cavity_display/frontend/: cavity_widget.py  decoder.py  fault_count_display.py  fault_decoder_display.py  gui_cavity.py  gui_cryomodule.py  gui_machine.py  utils.py
displays/cavity_display/utils/: faults.csv  utils.py
displays/cavity_timeplot/: plot.py  timeplot.py
displays/srf_striptool/: srf_srtiptool_utils.py  srf_stavDispMulti.ui  srf_stavDisplays.py  srf_stavDisplays.ui  srf_stavDisplaysCfg.py  srf_striptool_gui.py  srf_striptool_maker.py
displays/srfhome/: srf_home.py  srf_home.ui  utils.py
docs/: getting_started.md  index.md
docs/applications/: auto_setup.md  microphonics.md  q0.md  quench_processing.md  rf_commissioning.md  tuning.md
docs/displays/: cavity_display.md  fault_heatmap.md  srf_home.md
docs/superpowers/plans/: 2026-06-05-auto-setup-ui-redesign.md
docs/superpowers/specs/: 2026-06-05-auto-setup-ui-redesign.md
docs/utils/: linac_model.md  shared_utilities.md
q0_measurements/: cm20.json
src/sc_linac_physics/: __init__.py  cli.py  launchers.py
src/sc_linac_physics/cli/: cli.py  launchers.py  watcher_commands.py
src/sc_linac_physics/utils/: epics.py  logger.py  platform_paths.py  plot_tooltip.py  qt.py
tests/: conftest.py  test_cli.py  test_cli_entrypoints.py  test_integration.py  test_launchers.py  test_q0_gui.py  test_setup_commands.py  test_simulation.py  test_watcher_commands.py
tests/applications/Microphonics/: test_gui_integration.py  test_mock_res_data_acq.py
tests/applications/auto_setup/: conftest.py  test_gui_cavity.py  test_gui_cryomodule.py  test_gui_linac.py  test_setup_cavity.py  test_setup_cryomodule.py  test_setup_gui.py  test_setup_linac.py  test_setup_linac_object.py  test_setup_machine.py  test_style.py  test_widgets.py
tests/applications/hl_tuning/: test_hl_tuner.py
tests/applications/q0/: test_calibration.py  test_q0_cryomodule.py  test_q0_gui.py  test_q0_gui_utils.py  test_q0_measurement_widget.py  test_q0_utils.py  test_rf_measurement.py
tests/applications/quench_processing/: test_quench_cavity.py  test_quench_gui.py  test_quench_linac.py  test_quench_resetter.py
tests/applications/rf_commissioning/: __init__.py  test_batch_piezo_pre_rf_controller.py  test_batch_piezo_pre_rf_ui.py  test_data_models.py  test_database.py  test_import_boundaries.py  test_package_exports.py  test_phase_base.py  test_phase_specs.py  test_piezo_pre_rf_controller.py  test_session_workflow.py  (+3 more)
tests/cli/: test_cli.py  test_launchers.py  test_watcher_commands.py
tests/utils/: mock_utils.py  test_epics.py  test_platform_paths.py  test_qt.py
utils/: qt.py
utils/sc_linac/: RFStation.py  cavity.py  cryomodule.py  decarad.py  linac.py  linac_utils.py  magnet.py  piezo.py  rack.py  rfstation.py  ssa.py  stepper.py
utils/simulation/: auto_setup_service.py  cavity_service.py  cryo_service.py  cryomodule_service.py  decarad_service.py  fault_service.py  launcher_pv_group.py  rack_service.py  rfs_service.py  sc_linac_physics_service.py  service.py  ssa_service.py  tuner_service.py  tuning_service.py
utils/widgets/: rf_controls.py
(+359 files in other folders)
